plang/testing/logs/false-incorrect/185/program185.p.p
lgQw3 EK (HQ4u) S.
oh (Sgi) mrj (PobdU) (X).


r :- vst (peJt), i (AA) ef5 (O) Cf93v; (yb j2 gc (zC2) (eZ (ig (g6VU4 (AOqo)) P (Xy)))), a8Bd (eOf (xs) (HMdUF) iv lh) hxPI (ziI i D RK (RMStT)), piSr E B9qfP, (gxcg); (lLYN).
zj yH (VT6) (Ldh) :- ooI (gsbuv BTY (MD) (N) (Pgr7)) PBnJ6 W6.


wJl.
q mL4I (an) (xO72 r (Z) (x m rkIyi)) (H5N3) :- (((bb (TN) bCm L7 (KyiXo); h1Xx (VFy) BpZ N, sVB0D (TW0)))).


? p (fS (MU1)) (nmI), (hy (F); wiOiQ tuD (e (kCkL PBr)) wH a, toz (VG) Yvi ukw88 F2tWt); n, rVvs (r mym) nCC91 o, wLkH (o3 (n0) w) V (WK), sZ8 (ub OHeNr (veAc (zy Pjav (lZP H (IbEP) S8Yr) TqVAU (ZEQ)) dA)) (Z) C5DiU b8A; (yyTf9); (iohsv).
